@@ -1,5 +1,0 @@
-GtkSourceView is a text widget that extends the standard GTK+ 2.x text
-widget GtkTextView.  It improves GtkTextView by implementing syntax
-highlighting and other features typical of a source editor.
-
-This provides the 2.x API of this package.
