@@ -1,223 +1,0 @@
-@comment $NetBSD: PLIST,v 1.11 2010/07/06 15:51:19 drochner Exp $
-include/gtksourceview-2.0/gtksourceview/completion-providers/words/gtksourcecompletionwords.h
-include/gtksourceview-2.0/gtksourceview/gtksourcebuffer.h
-include/gtksourceview-2.0/gtksourceview/gtksourcecompletion.h
-include/gtksourceview-2.0/gtksourceview/gtksourcecompletioncontext.h
-include/gtksourceview-2.0/gtksourceview/gtksourcecompletioninfo.h
-include/gtksourceview-2.0/gtksourceview/gtksourcecompletionitem.h
-include/gtksourceview-2.0/gtksourceview/gtksourcecompletionproposal.h
-include/gtksourceview-2.0/gtksourceview/gtksourcecompletionprovider.h
-include/gtksourceview-2.0/gtksourceview/gtksourcegutter.h
-include/gtksourceview-2.0/gtksourceview/gtksourceiter.h
-include/gtksourceview-2.0/gtksourceview/gtksourcelanguage.h
-include/gtksourceview-2.0/gtksourceview/gtksourcelanguagemanager.h
-include/gtksourceview-2.0/gtksourceview/gtksourcemark.h
-include/gtksourceview-2.0/gtksourceview/gtksourceprintcompositor.h
-include/gtksourceview-2.0/gtksourceview/gtksourcestyle.h
-include/gtksourceview-2.0/gtksourceview/gtksourcestylescheme.h
-include/gtksourceview-2.0/gtksourceview/gtksourcestyleschememanager.h
-include/gtksourceview-2.0/gtksourceview/gtksourceundomanager.h
-include/gtksourceview-2.0/gtksourceview/gtksourceview-typebuiltins.h
-include/gtksourceview-2.0/gtksourceview/gtksourceview.h
-lib/libgtksourceview-2.0.la
-lib/pkgconfig/gtksourceview-2.0.pc
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceBuffer.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceCompletion.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceCompletionInfo.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceCompletionItem.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceCompletionProposal.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceCompletionProvider.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceGutter.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceLanguage.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceLanguageManager.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceMark.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourcePrintCompositor.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceStyle.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceStyleScheme.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceStyleSchemeManager.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceUndoManager.html
-share/gtk-doc/html/gtksourceview-2.0/GtkSourceView.html
-share/gtk-doc/html/gtksourceview-2.0/gtksourceview-2.0-Searching-in-a-GtkSourceBuffer.html
-share/gtk-doc/html/gtksourceview-2.0/gtksourceview-2.0-completioncontext.html
-share/gtk-doc/html/gtksourceview-2.0/gtksourceview-2.0.devhelp
-share/gtk-doc/html/gtksourceview-2.0/gtksourceview-2.0.devhelp2
-share/gtk-doc/html/gtksourceview-2.0/home.png
-share/gtk-doc/html/gtksourceview-2.0/index.html
-share/gtk-doc/html/gtksourceview-2.0/index.sgml
-share/gtk-doc/html/gtksourceview-2.0/lang-reference.html
-share/gtk-doc/html/gtksourceview-2.0/lang-tutorial.html
-share/gtk-doc/html/gtksourceview-2.0/left.png
-share/gtk-doc/html/gtksourceview-2.0/right.png
-share/gtk-doc/html/gtksourceview-2.0/rn01.html
-share/gtk-doc/html/gtksourceview-2.0/rn02.html
-share/gtk-doc/html/gtksourceview-2.0/style-reference.html
-share/gtk-doc/html/gtksourceview-2.0/style.css
-share/gtk-doc/html/gtksourceview-2.0/up.png
-share/gtksourceview-2.0/language-specs/R.lang
-share/gtksourceview-2.0/language-specs/ada.lang
-share/gtksourceview-2.0/language-specs/asp.lang
-share/gtksourceview-2.0/language-specs/awk.lang
-share/gtksourceview-2.0/language-specs/bibtex.lang
-share/gtksourceview-2.0/language-specs/boo.lang
-share/gtksourceview-2.0/language-specs/c.lang
-share/gtksourceview-2.0/language-specs/cg.lang
-share/gtksourceview-2.0/language-specs/changelog.lang
-share/gtksourceview-2.0/language-specs/chdr.lang
-share/gtksourceview-2.0/language-specs/check.sh
-share/gtksourceview-2.0/language-specs/cmake.lang
-share/gtksourceview-2.0/language-specs/convert.py
-share/gtksourceview-2.0/language-specs/cpp.lang
-share/gtksourceview-2.0/language-specs/csharp.lang
-share/gtksourceview-2.0/language-specs/css.lang
-share/gtksourceview-2.0/language-specs/cuda.lang
-share/gtksourceview-2.0/language-specs/d.lang
-share/gtksourceview-2.0/language-specs/def.lang
-share/gtksourceview-2.0/language-specs/desktop.lang
-share/gtksourceview-2.0/language-specs/diff.lang
-share/gtksourceview-2.0/language-specs/docbook.lang
-share/gtksourceview-2.0/language-specs/dosbatch.lang
-share/gtksourceview-2.0/language-specs/dot.lang
-share/gtksourceview-2.0/language-specs/dpatch.lang
-share/gtksourceview-2.0/language-specs/dtd.lang
-share/gtksourceview-2.0/language-specs/eiffel.lang
-share/gtksourceview-2.0/language-specs/erlang.lang
-share/gtksourceview-2.0/language-specs/fcl.lang
-share/gtksourceview-2.0/language-specs/forth.lang
-share/gtksourceview-2.0/language-specs/fortran.lang
-share/gtksourceview-2.0/language-specs/fsharp.lang
-share/gtksourceview-2.0/language-specs/gap.lang
-share/gtksourceview-2.0/language-specs/glsl.lang
-share/gtksourceview-2.0/language-specs/gtk-doc.lang
-share/gtksourceview-2.0/language-specs/gtkrc.lang
-share/gtksourceview-2.0/language-specs/haddock.lang
-share/gtksourceview-2.0/language-specs/haskell-literate.lang
-share/gtksourceview-2.0/language-specs/haskell.lang
-share/gtksourceview-2.0/language-specs/html.lang
-share/gtksourceview-2.0/language-specs/idl.lang
-share/gtksourceview-2.0/language-specs/ini.lang
-share/gtksourceview-2.0/language-specs/java.lang
-share/gtksourceview-2.0/language-specs/javascript.lang
-share/gtksourceview-2.0/language-specs/language.dtd
-share/gtksourceview-2.0/language-specs/language.rng
-share/gtksourceview-2.0/language-specs/language2.rng
-share/gtksourceview-2.0/language-specs/latex.lang
-share/gtksourceview-2.0/language-specs/libtool.lang
-share/gtksourceview-2.0/language-specs/lua.lang
-share/gtksourceview-2.0/language-specs/m4.lang
-share/gtksourceview-2.0/language-specs/makefile.lang
-share/gtksourceview-2.0/language-specs/mallard.lang
-share/gtksourceview-2.0/language-specs/msil.lang
-share/gtksourceview-2.0/language-specs/nemerle.lang
-share/gtksourceview-2.0/language-specs/nsis.lang
-share/gtksourceview-2.0/language-specs/objc.lang
-share/gtksourceview-2.0/language-specs/ocaml.lang
-share/gtksourceview-2.0/language-specs/ocl.lang
-share/gtksourceview-2.0/language-specs/octave.lang
-share/gtksourceview-2.0/language-specs/ooc.lang
-share/gtksourceview-2.0/language-specs/pascal.lang
-share/gtksourceview-2.0/language-specs/perl.lang
-share/gtksourceview-2.0/language-specs/php.lang
-share/gtksourceview-2.0/language-specs/pkgconfig.lang
-share/gtksourceview-2.0/language-specs/po.lang
-share/gtksourceview-2.0/language-specs/prolog.lang
-share/gtksourceview-2.0/language-specs/python.lang
-share/gtksourceview-2.0/language-specs/rpmspec.lang
-share/gtksourceview-2.0/language-specs/ruby.lang
-share/gtksourceview-2.0/language-specs/scheme.lang
-share/gtksourceview-2.0/language-specs/sh.lang
-share/gtksourceview-2.0/language-specs/sparql.lang
-share/gtksourceview-2.0/language-specs/sql.lang
-share/gtksourceview-2.0/language-specs/styles.rng
-share/gtksourceview-2.0/language-specs/t2t.lang
-share/gtksourceview-2.0/language-specs/tcl.lang
-share/gtksourceview-2.0/language-specs/texinfo.lang
-share/gtksourceview-2.0/language-specs/vala.lang
-share/gtksourceview-2.0/language-specs/vbnet.lang
-share/gtksourceview-2.0/language-specs/verilog.lang
-share/gtksourceview-2.0/language-specs/vhdl.lang
-share/gtksourceview-2.0/language-specs/xml.lang
-share/gtksourceview-2.0/language-specs/xslt.lang
-share/gtksourceview-2.0/language-specs/yacc.lang
-share/gtksourceview-2.0/styles/classic.xml
-share/gtksourceview-2.0/styles/cobalt.xml
-share/gtksourceview-2.0/styles/kate.xml
-share/gtksourceview-2.0/styles/oblivion.xml
-share/gtksourceview-2.0/styles/styles.rng
-share/gtksourceview-2.0/styles/tango.xml
-share/locale/ar/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/as/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ast/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/az/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/be/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/bg/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/bn/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/bn_IN/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/bs/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ca/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ca@valencia/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/cs/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/cy/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/da/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/de/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/dz/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/el/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/en@shaw/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/en_CA/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/en_GB/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/es/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/et/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/eu/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/fa/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/fi/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/fr/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ga/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/gl/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/gu/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/he/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/hi/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/hr/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/hu/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/id/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/it/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ja/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/kn/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ko/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/lt/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/lv/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/mai/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/mg/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/mk/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ml/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/mn/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/mr/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ms/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/nb/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ne/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/nl/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/nn/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/oc/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/or/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/pa/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/pl/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/pt/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/pt_BR/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ro/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ru/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/rw/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/si/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/sk/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/sl/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/sq/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/sr/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/sr@latin/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/sv/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/ta/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/te/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/th/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/tr/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/uk/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/vi/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/xh/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/zh_CN/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/zh_HK/LC_MESSAGES/gtksourceview-2.0.mo
-share/locale/zh_TW/LC_MESSAGES/gtksourceview-2.0.mo
