@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.18 2021/10/26 11:33:53 nia Exp $
-
-BLAKE2s (gtksourceview-2.10.5.tar.bz2) = 64e9440f11a099488a0a657025f01651d0a7a1a677cc51a49a154706180cf87b
-SHA512 (gtksourceview-2.10.5.tar.bz2) = 6f64acef6196bfc5953e0b148d7e460d366073b5e21367c01b01fc4d1c86ffe8aca71ecd77cf0814e47d8fc3085495f25bbbdc69e746987b02fd02fcda64886d
-Size (gtksourceview-2.10.5.tar.bz2) = 1253321 bytes
