@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2559 2024/04/18 06:41:38 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2560 2024/04/18 06:45:10 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4227,3 +4227,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated devel/py-meson_python to 0.16.0 [adam 2024-04-18]
 	Updated devel/py-project-metadata to 0.8.0 [adam 2024-04-18]
 	Updated editors/gummi to 0.8.3 [wiz 2024-04-18]
+	Removed x11/gtksourceview2 successor x11/gtksourceview3 [wiz 2024-04-18]
